# cv-bot

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
config/: __init__.py  app_config.py  gemini_config.py  rl_config.py
core/: __init__.py  gemini_optimizer.py  job_environment.py  resume_manager.py  rl_agent.py
data_models/: __init__.py  job.py  resume.py
openenv_cv_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: __init__.py  app.py  cv_bot_environment.py
server/static/: index.html
utils/: __init__.py  ats_scorer.py  file_handler.py  logger.py
